cmake_minimum_required( VERSION 3.10 )
execute_process(COMMAND python3 -c "from distutils.sysconfig import get_python_lib; print (get_python_lib())" OUTPUT_VARIABLE PYTHON_SITE_PATH OUTPUT_STRIP_TRAILING_WHITESPACE)
INSTALL(FILES "robocomp.pth" DESTINATION ${PYTHON_SITE_PATH} )
INSTALL(FILES "workspace.py" DESTINATION /opt/robocomp/python)
INSTALL(PROGRAMS "rcworkspace.py" DESTINATION /opt/robocomp/bin RENAME rcworkspace )
INSTALL(PROGRAMS "rcbuildvalidator/rcbuildvalidator.py" DESTINATION /opt/robocomp/bin RENAME rcbuildvalidator )
INSTALL( DIRECTORY "rcbuildvalidator/resources" DESTINATION /opt/robocomp/share/rcbuildvalidator )
INSTALL(PROGRAMS "rcrun.py" DESTINATION /opt/robocomp/bin RENAME rcrun )
INSTALL(PROGRAMS "rced.py" DESTINATION /opt/robocomp/bin RENAME rced )
INSTALL(PROGRAMS "rcbuild.py" DESTINATION /opt/robocomp/bin RENAME rcbuild )
INSTALL(PROGRAMS "rccomp.py" DESTINATION /opt/robocomp/bin RENAME rccomp )
INSTALL(PROGRAMS "rccd_utils.py" DESTINATION /opt/robocomp/bin RENAME rccd_utils )
INSTALL(PROGRAMS "rcfind.py" DESTINATION /opt/robocomp/bin RENAME rcfind )
INSTALL(PROGRAMS "rccd.sh" DESTINATION /opt/robocomp/share ) #source this in .bashrc
INSTALL(PROGRAMS "rbcd.sh" DESTINATION /opt/robocomp/share )
INSTALL(PROGRAMS "rbcd.zsh" DESTINATION /opt/robocomp/share )
INSTALL(CODE "message(STATUS \"Installing rccd in ~/.bashrc and ~/.zshrc\")
execute_process(COMMAND sh \"${CMAKE_CURRENT_LIST_DIR}/setup.sh\")")
INSTALL(CODE "message(STATUS \"Installing autocompletion in ~/.bashrc\")
execute_process(COMMAND activate-global-python-argcomplete)")
INSTALL(CODE "message(STATUS \"First execution of rcworkspace\")
execute_process(COMMAND /opt/robocomp/bin/rcworkspace ${CMAKE_SOURCE_DIR}/components/ --accept-all) ")
